--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,7 @@ First web page!!:)<br>
 <hr>
 <h1><font face="Old English Text MT">This is short-key.....</font></h1>
 So you have stumbled across page 2!<br><br>
-  <img src="giphy.gif">
+  <img src="i.bmp">
 
 <u>Created by a text editor only</u>
 <hr>
